Fix text alignment in map embed

--- a/public/sass/_map-embed.scss
+++ b/public/sass/_map-embed.scss
@@ -16,6 +16,7 @@
     top: 0;
     left: 0;
     padding-bottom: 1em;
+    text-align: left;
     @media screen and (min-width: 50em) {
       background-color: rgba(77,77,77,0.9);
       position: absolute;
